# Syneto_lab-4__Adrian-Ureche

./: main.py  pyproject.toml
